# anrsm

./: .gitignore  README.md  pyproject.toml  settings.toml
.github/workflows/: test.yaml
example/: RuyiSDK-20231026-HOST-riscv64-linux-gnu-riscv64-plct-linux-gnu.json  RuyiSDK-20231026-PLCT-Sources-riscv64-plct-linux-gnu.json  RuyiSDK-20231110-PLCT-Sources-HOST-riscv64-linux-gnu-riscv64-plct-linux-gnu.json  RuyiSDK-20231110-T-Head-Sources-HOST-riscv64-linux-gnu-riscv64-plctxthead-linux-gnu.json  RuyiSDK-20231110-T-Head-Sources-riscv64-plctxthead-linux-gnu.json  RuyiSDK-20231110-Upstream-Sources-HOST-riscv64-linux-gnu-riscv64-unknown-linux-gnu.json  RuyiSDK-20231110-Upstream-Sources-riscv64-unknown-linux-gnu.json  RuyiSDK-20231118-T-Head-Sources-HOST-riscv64-linux-gnu-riscv64-plctxthead-linux-gnu.json  RuyiSDK-20231118-T-Head-Sources-riscv64-plctxthead-linux-gnu.json  metadata-example.json  metadata.json  metadataplct.json  source-example.json  source.json
src/anrsm/: __main__.py  cli.py  configcli.py  sourcecli.py
src/anrsm/source/: source.py
